messagepack-derive/tests/fail/default_missing.stderr
error[E0277]: the trait bound `NoDefault: Encode` is not satisfied
  --> tests/fail/default_missing.rs:20:21
   |
20 |     assert_derive::<S1<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Encode` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Encode`:
             &V
             &[V]
             &mut V
             &str
             ()
             (V0, V1)
             (V0, V1, V2)
             (V0, V1, V2, V3)
           and $N others
note: required for `S1<NoDefault>` to implement `Encode`
  --> tests/fail/default_missing.rs:5:10
   |
 5 | #[derive(Encode, Decode)]
   |          ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
 6 | struct S1<T> {
   |        ^^^^^
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:26
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                          ^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:20:21
   |
20 |     assert_derive::<S1<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Decode<'de>`:
             Option<V>
             ReferenceDecoder
             ReferenceStrBinDecoder
             ReferenceStrDecoder
note: required for `S1<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:5:18
   |
 5 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S1<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |

error[E0277]: the trait bound `NoDefault: DecodeBorrowed<'_>` is not satisfied
  --> tests/fail/default_missing.rs:20:21
   |
20 |     assert_derive::<S1<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `DecodeBorrowed<'_>` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `DecodeBorrowed<'de>`:
             `&'de [u8]` implements `DecodeBorrowed<'de>`
             `&'de str` implements `DecodeBorrowed<'de>`
             `()` implements `DecodeBorrowed<'de>`
             `(V0, V1)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3, V4)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3, V4, V5)` implements `DecodeBorrowed<'de>`
           and $N others
note: required for `S1<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:5:18
   |
 5 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S1<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoDefault: Encode` is not satisfied
  --> tests/fail/default_missing.rs:21:21
   |
21 |     assert_derive::<S2<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Encode` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Encode`:
             &V
             &[V]
             &mut V
             &str
             ()
             (V0, V1)
             (V0, V1, V2)
             (V0, V1, V2, V3)
           and $N others
note: required for `S2<NoDefault>` to implement `Encode`
  --> tests/fail/default_missing.rs:13:10
   |
13 | #[derive(Encode, Decode)]
   |          ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
14 | struct S2<T>(#[msgpack(default)] T);
   |        ^^^^^
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:26
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                          ^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Encode` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/fail/default_missing.rs:21:21
   |
21 |     assert_derive::<S2<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `Decode<'de>`:
             Option<V>
             ReferenceDecoder
             ReferenceStrBinDecoder
             ReferenceStrDecoder
note: required for `S2<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:13:18
   |
13 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S2<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
17 + #[derive(Default)]
18 | struct NoDefault;
   |

error[E0277]: the trait bound `NoDefault: DecodeBorrowed<'_>` is not satisfied
  --> tests/fail/default_missing.rs:21:21
   |
21 |     assert_derive::<S2<NoDefault>>();
   |                     ^^^^^^^^^^^^^ the trait `DecodeBorrowed<'_>` is not implemented for `NoDefault`
   |
   = help: the following other types implement trait `DecodeBorrowed<'de>`:
             `&'de [u8]` implements `DecodeBorrowed<'de>`
             `&'de str` implements `DecodeBorrowed<'de>`
             `()` implements `DecodeBorrowed<'de>`
             `(V0, V1)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3, V4)` implements `DecodeBorrowed<'de>`
             `(V0, V1, V2, V3, V4, V5)` implements `DecodeBorrowed<'de>`
           and $N others
note: required for `S2<NoDefault>` to implement `DecodeBorrowed<'_>`
  --> tests/fail/default_missing.rs:13:18
   |
13 | #[derive(Encode, Decode)]
   |                  ^^^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: required for `S2<NoDefault>` to implement `Decode<'_>`
note: required by a bound in `assert_derive`
  --> tests/fail/default_missing.rs:11:35
   |
11 | fn assert_derive<'de, T: Encode + Decode<'de>>() {}
   |                                   ^^^^^^^^^^^ required by this bound in `assert_derive`
   = note: this error originates in the derive macro `Decode` (in Nightly builds, run with -Z macro-backtrace for more info)
